dar nota e teste